# cvm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bins/revm-test/: Cargo.toml
bins/revme/: Cargo.toml  README.md
bins/revme/src/: cli_env.rs
bins/revme/src/statetest/: merkle_trie.rs  runner.rs
bins/revme/src/statetest/models/: deserializer.rs  mod.rs  spec.rs
bins/revme/tests/: ican_deploy_contract_test.rs  ican_send_eth_test.rs
bins/revme/tests/Huff/: Send.huff
crates/cvm/: Cargo.toml
crates/cvm/src/: cvm.rs  cvm_impl.rs  db.rs  inspector.rs  lib.rs
crates/cvm/src/db/: in_memory_db.rs
crates/cvm/src/inspector/: customprinter.rs  energy.rs  tracer_eip3155.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: energy.rs  host.rs  inner_models.rs  instruction_result.rs  instructions.rs  interpreter.rs  lib.rs  macros.rs
crates/interpreter/src/energy/: calc.rs
crates/interpreter/src/host/: dummy_host.rs
crates/interpreter/src/instructions/: arithmetic.rs  bitwise.rs  control.rs  host.rs  host_env.rs  macros.rs  memory.rs  opcode.rs  stack.rs  system.rs
crates/interpreter/src/interpreter/: analysis.rs  contract.rs  memory.rs  stack.rs
crates/precompile/: CHANGELOG.md  Cargo.toml  README.md
crates/precompile/src/: blake2.rs  bn128.rs  hash.rs  identity.rs  lib.rs  modexp.rs  secp256k1.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: bits.rs  bytecode.rs  db.rs  env.rs  lib.rs  log.rs  precompile.rs  result.rs  specification.rs  state.rs  utilities.rs
crates/primitives/src/db/: components.rs
crates/primitives/src/db/components/: state.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: evm.rs  evm_impl.rs  inspector.rs  journaled_state.rs  lib.rs
crates/revm/src/db/: in_memory_db.rs
crates/revm/src/inspector/: customprinter.rs  energy.rs  gas.rs  tracer_eip3155.rs
