[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM - Rust Ethereum Virtual Machine"
edition = "2021"
keywords = ["no_std", "ethereum", "cvm"]
license = "MIT"
name = "cvm"
repository = "https://github.com/core-coin/cvm"
version = "3.0.0"
readme = "../../README.md"

[dependencies]
cvm-precompile = { path = "../precompile", version = "2.0.0", default-features = false }
cvm-interpreter = { path = "../interpreter", version = "1.0.0", default-features = false }

auto_impl = { version = "1.0", default-features = false }

# Optional
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }



[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std", "secp256k1"]
dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_energy_limit",
    "optional_eip3607",
    "optional_energy_refund",
]
secp256k1 = ["cvm-precompile/secp256k1"]
memory_limit = ["cvm-interpreter/memory_limit"]
no_energy_measuring = ["cvm-interpreter/no_energy_measuring"]
optional_balance_check = ["cvm-interpreter/optional_balance_check"]
optional_block_energy_limit = ["cvm-interpreter/optional_block_energy_limit"]
optional_eip3607 = ["cvm-interpreter/optional_eip3607"]
optional_energy_refund = ["cvm-interpreter/optional_energy_refund"]
std = ["cvm-interpreter/std"]
serde = ["dep:serde","dep:serde_json", "cvm-interpreter/serde"]
# deprecated feature
web3db = []
with-serde = []
