[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "CVM Interpreter"
edition = "2021"
keywords = ["no_std", "ethereum", "cvm", "interpreter"]
license = "MIT"
name = "cvm-interpreter"
repository = "https://github.com/core-coin/cvm"
version = "1.0.0"
readme = "../../README.md"

[dependencies]
cvm-primitives = { path = "../primitives", version="1.0.0", default-features = false }

#utility
derive_more = "0.99"
enumn = "0.1"

# sha3 keccak hasher
sha3 = { version = "0.10", default-features = false, features = [] }

# optional
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
proptest = { version = "1.1", optional = true }
proptest-derive = { version = "0.3", optional = true }

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
proptest = { version = "1.1" }
proptest-derive = "0.3"

[features]
default = ["std"]
dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_energy_limit",
    "optional_eip3607",
    "optional_energy_refund",
]
memory_limit = ["cvm-primitives/memory_limit"]
no_energy_measuring = ["cvm-primitives/no_energy_measuring"]
optional_balance_check = ["cvm-primitives/optional_balance_check"]
optional_block_energy_limit = ["cvm-primitives/optional_block_energy_limit"]
optional_eip3607 = ["cvm-primitives/optional_eip3607"]
optional_energy_refund = ["cvm-primitives/optional_energy_refund"]
std = ["cvm-primitives/std"]
serde = [
    "dep:serde",
    "cvm-primitives/serde",
]
arbitrary = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "cvm-primitives/arbitrary",
]
