[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "CVM Precompiles - Core compatible precompiled contracts"
edition = "2021"
keywords = ["ethereum", "cvm", "precompiles"]
license = "MIT"
name = "cvm-precompile"
repository = "https://github.com/core-coin/cvm"
version = "2.0.0"

[dependencies]
cvm-primitives = { path = "../primitives", version = "1.0.0" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
k256 = { version = "0.11", default-features = false, features = ["ecdsa", "keccak256"] }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
once_cell = "1.17"
ripemd = { version = "0.1", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = ["alloc", "recovery"], optional = true }
sha2 = { version = "0.10.5", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
libgoldilocks = { git = "https://github.com/core-coin/ed448-rs" }


[dev-dependencies]
hex = "0.4"
